--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShoppingList">
-        <activity android:name=".presentation.ShopItemActivity"
-            android:windowSoftInputMode="adjustResize"/>
-        <activity android:name=".presentation.MainActivity"
+        <activity
+            android:name=".presentation.ShopItemActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".presentation.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:authorities="com.sumin.shoppinglist"
+            android:name=".data.ShopListProvider"
+            android:exported="true" />
     </application>
 
 </manifest>
